@@ -18,8 +18,7 @@
 import nose
 import numpy as np
 from assimulo import testattr
-from assimulo.exception import *
-from assimulo.problem import *
+from assimulo.problem import Explicit_Problem, Implicit_Problem
 from assimulo.solvers import Radau5DAE, Radau5ODE, Dopri5, RodasODE
 
 def res(t,y,yd,sw):
@@ -30,35 +29,30 @@ def rhs(t,y,sw):
     return np.array([-y])
 def estate_events(t, y, sw):
     return y - 0.5
-
-problem = Implicit_Problem(res, [1.0], [-1.0])
-problem.state_events = state_events
-
-eproblem = Explicit_Problem(rhs, [1.0])
-eproblem.state_events = estate_events
+def handle_event(solver, event_info):
+    pass
 
 class Test_Solvers:
+    def setUp(self):
+        self.problem = Implicit_Problem(res, [1.0], [-1.0])
+        self.problem.state_events = state_events
+        self.problem.handle_event = handle_event
+
+        self.eproblem = Explicit_Problem(rhs, [1.0])
+        self.eproblem.state_events = estate_events
+        self.eproblem.handle_event = handle_event
     
     @testattr(stddist = True)
     def test_radau5dae_state_events(self):
-        solver = Radau5DAE(problem)
+        solver = Radau5DAE(self.problem)
         
         t,y,yd = solver.simulate(2,33)
         
         nose.tools.assert_almost_equal(float(y[-1]), 0.135, 3)
         
     @testattr(stddist = True)
-    def test_radau5ode_state_events_f(self):
-        solver = Radau5ODE(eproblem)
-        solver.implementation = 'f'
-        
-        t,y = solver.simulate(2,33)
-        
-        nose.tools.assert_almost_equal(float(y[-1]), 0.135, 3)
-
-    @testattr(stddist = True)
     def test_dopri5_state_events(self):
-        solver = Dopri5(eproblem)
+        solver = Dopri5(self.eproblem)
         
         t,y = solver.simulate(2,33)
         
@@ -66,7 +60,7 @@ class Test_Solvers:
         
     @testattr(stddist = True)
     def test_rodasode_state_events(self):
-        solver = RodasODE(eproblem)
+        solver = RodasODE(self.eproblem)
         
         t,y = solver.simulate(2,33)
         
